// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressControl ProgressControlBar should render ProgressControlBar for progress 0 1`] = `
<div
  className="progress_control_bar progress_control_bar--hide"
>
  <div
    className="progress_control_bar__bar"
    style={
      Object {
        "finished": false,
        "progress": 0,
        "speed": 10,
      }
    }
  />
</div>
`;

exports[`ProgressControl ProgressControlBar should render ProgressControlBar when in progress 1`] = `
<div
  className="progress_control_bar"
>
  <div
    className="progress_control_bar__bar"
    style={
      Object {
        "finished": false,
        "progress": 50,
        "speed": 10,
      }
    }
  >
    <div
      className="progress_control_bar__peg"
    />
  </div>
</div>
`;

exports[`ProgressControl ProgressControlBar should render ProgressControlBar when progress finished 1`] = `
<div
  className="progress_control_bar progress_control_bar--finished"
>
  <div
    className="progress_control_bar__bar"
    style={
      Object {
        "finished": true,
        "progress": 100,
        "speed": 10,
      }
    }
  >
    <div
      className="progress_control_bar__peg"
    />
  </div>
</div>
`;
